# performance_engineering-DS-2019

./: .gitignore  README.md
HW1/: CMakeLists.txt  HW1  Makefile  README.md  main.cpp  task1.cpp  task2.cpp  task3.cpp  tasks.hpp
HW2/: CMakeLists.txt  Description  Performance_HW2.ipynb  alias.hpp  main.cpp  task1.cpp  tasks.cpp  tasks.hpp  test.hpp  utils.cpp  utils.hpp
HW3/: CMakeLists.txt  alias.hpp  main.cpp  multi_thread_funcs.hpp  multi_thread_funcs.ipp  tasks.cpp  tasks.hpp  test.hpp  test.ipp  utils.cpp  utils.hpp
HW4/: CMakeLists.txt  alias.hpp  main.cpp  multi_process_funcs.hpp  test.hpp  test.ipp  utils.cpp  utils.hpp
